// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TrackingSectionComponent should create 1`] = `
<app-tracking-section
  color={[Function Function]}
  entity={[Function Function]}
>
  <div
    class="grid"
  >
    <div
      class="col-12 md:col-6 flex flex-column gap-4"
    >
      <div
        class="flex flex-column gap-2"
      >
        <span
          class="font-bold primary"
        >
          Creado por
        </span>
        <span
          class="text-lg"
        >
          test
        </span>
      </div>
      <div
        class="flex flex-column gap-2"
      >
        <span
          class="font-bold primary"
        >
          Creado en
        </span>
        <span
          class="text-lg"
        >
          28/04/2026, 10:25:36
        </span>
      </div>
    </div>
  </div>
</app-tracking-section>
`;

exports[`TrackingSectionComponent should create with update data 1`] = `
<app-tracking-section
  color={[Function Function]}
  entity={[Function Function]}
>
  <div
    class="grid"
  >
    <div
      class="col-12 md:col-6 flex flex-column gap-4"
    >
      <div
        class="flex flex-column gap-2"
      >
        <span
          class="font-bold primary"
        >
          Creado por
        </span>
        <span
          class="text-lg"
        >
          test
        </span>
      </div>
      <div
        class="flex flex-column gap-2"
      >
        <span
          class="font-bold primary"
        >
          Creado en
        </span>
        <span
          class="text-lg"
        >
          28/04/2026, 10:25:36
        </span>
      </div>
    </div>
    <div
      class="col-12 md:col-6 flex flex-column gap-4"
    >
      <div
        class="flex flex-column gap-2"
      >
        <span
          class="font-bold primary"
        >
          Modificado por
        </span>
        <span
          class="text-lg"
        >
          test-user
        </span>
      </div>
      <div
        class="flex flex-column gap-2"
      >
        <span
          class="font-bold primary"
        >
          Modificado en
        </span>
        <span
          class="text-lg"
        >
          01/01/2024, 13:00:00
        </span>
      </div>
    </div>
  </div>
</app-tracking-section>
`;
